--- a/src/Pipfile
+++ b/src/Pipfile
@@ -4,15 +4,36 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-sqlalchemy = "*"
-flask = "*"
-flask-sqlalchemy = "*"
-marshmallow = "*"
-marshmallow-sqlalchemy = "*"
-flask-marshmallow = "*"
-flasgger = "*"
-pyodbc = "*"
-python-dotenv = "*"
-flask-cors = "*"
+attrs = "==23.2.0"
+blinker = "==1.7.0"
+click = "==8.1.7"
+colorama = "==0.4.6"
+flasgger = "==0.9.7.1"
+flask = "==3.0.0"
+flask-cors = "==4.0.0"
+flask-marshmallow = "==0.15.0"
+flask-sqlalchemy = "==3.1.1"
+greenlet = "==3.0.3"
+itsdangerous = "==2.1.2"
+jinja2 = "==3.1.2"
+jsonschema = "==4.20.0"
+jsonschema-specifications = "==2023.12.1"
+markupsafe = "==2.1.3"
+marshmallow = "==3.20.1"
+marshmallow-sqlalchemy = "==0.29.0"
+mistune = "==3.0.2"
+packaging = "==23.2"
+pyodbc = "==5.0.1"
+python-dotenv = "==1.0.0"
+pyyaml = "==6.0.1"
+referencing = "==0.32.1"
+rpds-py = "==0.16.2"
+six = "==1.16.0"
+sqlalchemy = "==2.0.25"
+typing-extensions = "==4.9.0"
+werkzeug = "==3.0.1"
 
 [dev-packages]
+
+[requires]
+python_version = "3.11"
