--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,12 @@ services:
     volumes:
       - vol_api_protheus:/app
     ports:
-      - "127.0.0.1:${API_HOST}:${API_PORT}:5000"
+      # Host:Container - Escrever na mão pq o .env não é carregado nesse momento.
+      - "192.168.17.24:9000:9000"
     restart: always
+    # Flask requires SIGINT to stop gracefully
+    # (default stop signal from Compose is SIGTERM)
+    stop_signal: SIGINT
 
 volumes:
   vol_api_protheus:
