GDM-108 # Implantação da Rota de Horário do Servidor.

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -26,6 +26,7 @@ packaging = "==23.2"
 pyodbc = "==5.0.1"
 python-dotenv = "==1.0.0"
 pyyaml = "==6.0.1"
+pytz = "*"
 referencing = "==0.32.1"
 rpds-py = "==0.16.2"
 six = "==1.16.0"
